overflow mobile issues

--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+html,body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
   overflow-x: hidden;
 }
 
